[project]
name = "maestro"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.5.3",
    "django-celery-beat>=2.8.1",
    "djangorestframework>=3.16.1",
    "environs[django]>=14.3.0",
]

[dependency-groups]
dev = [
    "deptry>=0.23.1",
    "django-stubs>=5.2.2",
    "djangorestframework-stubs>=3.16.1",
    "ipython>=9.4.0",
    "mypy>=1.17.1",
]
