[project]
name = "maestro"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "celery[redis]>=5.5.3",
  "django>=5.2.5",
  "django-celery-beat>=2.8.1",
  "djangorestframework>=3.16.1",
  "environs[django]>=14.3.0",
]

[dependency-groups]
dev = [
  "deptry>=0.23.1",
  "django-stubs[compatible-mypy]>=5.2.2",
  "djangorestframework-stubs[compatible-mypy]>=3.16",
  "ipython>=9.4.0",
  "mypy<=1.17.1",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "maestro.settings"
